--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,7 @@ application {
     // Define the main class for the application.
     mainClass = 'frc.vision.Main'
 }
+
+tasks.withType(JavaCompile) {
+    // options.compilerArgs << '-Xlint:unchecked'
+}
