--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ java {
 
 application {
     // Define the main class for the application.
-    mainClass = 'frc.vision.Main'
+    mainClass = 'frc.vision.VisionMain'
+    // applicationDefaultJvmArgs = ['-agentlib:jdwp=transport=dt_socket,server=y,suspend=n']
 }
 
 tasks.withType(JavaCompile) {
