--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,19 @@ application {
 }
 
 tasks.register("saveClasspath") {
-    file("$rootDir/classpath.txt").setText(sourceSets.main.runtimeClasspath.asPath)
+    file("$buildDir/classpath.txt").setText(sourceSets.main.runtimeClasspath.asPath)
+}
+
+tasks.register("setupBuildScript") {
+    def path = sourceSets.main.runtimeClasspath.asPath
+    def f = file("$buildDir/run.sh")
+    f.setText("#!/bin/sh\nexport CLASSPATH=\"$path\"\njava -agentlib:jdwp=transport=dt_socket,server=y,suspend=n frc.vision.VisionMain \"\$@\"")
+    f.setExecutable(true)
+}
+
+tasks.named("build") {
+    dependsOn "saveClasspath"
+    dependsOn "setupBuildScript"
 }
 
 tasks.withType(JavaCompile) {
