--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation 'edu.wpi.first.apriltag:apriltag-java:2024.3.2'
     implementation 'edu.wpi.first.ntcore:ntcore-java:2024.3.2'
     implementation 'edu.wpi.first.wpiutil:wpiutil-java:2024.3.2'
+    implementation 'edu.wpi.first.wpinet:wpinet-java:2024.3.2'
     implementation 'com.google.code.gson:gson:2.11.0'
 
     runtimeOnly 'edu.wpi.first.wpimath:wpimath-java:2024.3.2' // needed for wpiutil I think?
@@ -23,6 +24,7 @@ dependencies {
     runtimeOnly 'edu.wpi.first.apriltag:apriltag-jni:2024.3.2:linuxarm64' // needed for apriltag
     runtimeOnly 'edu.wpi.first.ntcore:ntcore-jni:2024.3.2:linuxarm64' // needed for ntcore
     runtimeOnly 'edu.wpi.first.wpiutil:wpiutil-jni:2024.3.2:linuxarm64' // needed for ntcore
+    runtimeOnly 'edu.wpi.first.wpinet:wpinet-jni:2024.3.2:linuxarm64'
     runtimeOnly 'com.fasterxml.jackson.core:jackson-core:2.18.0' // needed so wpiutil doesn't get upset
     runtimeOnly 'us.hebi.quickbuf:quickbuf-runtime:1.4' // needed so wpimath doesn't get upset
     runtimeOnly 'org.ejml:ejml-core:0.43.1' // needed for wpimath
@@ -52,7 +54,7 @@ tasks.register("saveClasspath") {
 tasks.register("setupBuildScript") {
     def path = sourceSets.main.runtimeClasspath.asPath
     def f = file("$buildDir/run.sh")
-    f.setText("#!/bin/sh\nexport CLASSPATH=\"$path\"\njava -agentlib:jdwp=transport=dt_socket,server=y,suspend=n frc.vision.VisionMain \"\$@\"")
+    f.setText("#!/bin/sh\nexport CLASSPATH=\"$path\"\nexport LD_PRELOAD=\"\$(find ~/.wpilib/nativecache -name '*wpiutil*' | paste -sd :)\"\njava -agentlib:jdwp=transport=dt_socket,server=y,suspend=n frc.vision.VisionMain \"\$@\"")
     f.setExecutable(true)
 }
 
@@ -61,6 +63,9 @@ tasks.named("build") {
     dependsOn "setupBuildScript"
 }
 
-tasks.withType(JavaCompile) {
-    // options.compilerArgs << '-Xlint:unchecked'
+tasks.withType(JavaCompile) {}
+
+tasks.withType(JavaExec) {
+    def found = fileTree(dir: System.properties["user.home"] + "/.wpilib/nativecache", include: "**/*wpiutil*").join ":"
+    environment "LD_PRELOAD", found
 }
