--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,9 @@ dependencies {
     implementation 'edu.wpi.first.ntcore:ntcore-java:2024.3.2'
     implementation 'edu.wpi.first.wpiutil:wpiutil-java:2024.3.2'
     implementation 'edu.wpi.first.wpinet:wpinet-java:2024.3.2'
+    implementation 'edu.wpi.first.wpimath:wpimath-java:2024.3.2'
     implementation 'com.google.code.gson:gson:2.11.0'
 
-    runtimeOnly 'edu.wpi.first.wpimath:wpimath-java:2024.3.2' // needed for wpiutil I think?
     runtimeOnly 'edu.wpi.first.wpiunits:wpiunits-java:2024.3.2' // needed for wpimath
     runtimeOnly 'edu.wpi.first.apriltag:apriltag-jni:2024.3.2:linuxarm64' // needed for apriltag
     runtimeOnly 'edu.wpi.first.ntcore:ntcore-jni:2024.3.2:linuxarm64' // needed for ntcore
