--- a/build.gradle
+++ b/build.gradle
@@ -51,16 +51,17 @@ tasks.register("saveClasspath") {
     file("$buildDir/classpath.txt").setText(sourceSets.main.runtimeClasspath.asPath)
 }
 
-tasks.register("setupBuildScript") {
+tasks.register("setupRunScript") {
     def path = sourceSets.main.runtimeClasspath.asPath
     def f = file("$buildDir/run.sh")
     f.setText("#!/bin/sh\nexport CLASSPATH=\"$path\"\nexport LD_PRELOAD=\"\$(find ~/.wpilib/nativecache -name '*wpiutil*' | paste -sd :)\"\njava -agentlib:jdwp=transport=dt_socket,server=y,suspend=n frc.vision.VisionMain \"\$@\"")
     f.setExecutable(true)
+    dependsOn "compileJava"
 }
 
 tasks.named("build") {
     dependsOn "saveClasspath"
-    dependsOn "setupBuildScript"
+    dependsOn "setupRunScript"
 }
 
 tasks.withType(JavaCompile) {}
